pagejump color fix

--- a/style.less
+++ b/style.less
@@ -120,6 +120,7 @@
 .paperclip__pagenum__nohref {
   vertical-align: middle;
   font-size: 0.84rem;
+  color: __paperclip__textarea__;
   border: none;
 }
 
@@ -128,7 +129,7 @@
 }
 
 .paperclip__pagejump__input{
-  border: 2px solid __paperclip__stdbg__;
+  border: 2px solid __paperclip__textarea__;
   width: @clipunit;
   height: @clipunit;
 }
